<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.MainActivity"
        mapbox:umanoPanelHeight="80dp"
        mapbox:umanoDragView="@id/drag"
        mapbox:umanoScrollableView= "@id/recyclerView"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        mapbox:umanoOverlay="false"
        mapbox:umanoParallaxOffset="100dp"
        android:id="@+id/slideUp"

        mapbox:umanoShadowHeight="5dp">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                mapbox:mapbox_styleUrl = "mapbox://styles/mapbox/streets-v10"
                mapbox:mapbox_cameraZoom = "11"/>
    </RelativeLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:id="@+id/drag"
            android:orientation="vertical">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="68dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20sp"
                        android:textSize="18sp"
                        android:layout_centerVertical="true"
                        android:text="Locations"
                />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="15sp"
                    android:layout_marginRight="15dp"
                    android:enabled="false"
                    android:id="@+id/navigate"
                    android:layout_centerVertical="true"
                    android:text="Start Navigation"
            />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/recyclerView"/>
    </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>